feat: Comprehensive Platform Refactor and Enhancement
This commit delivers a major refactoring of the FinOps Analysis Platform, elevating it to a robust, production-ready tool. Key improvements include the introduction of strongly-typed data models, integration of Active Assist recommendation analysis, enhanced usability with a self-contained Jupyter notebook and improved GCP integration, and a better developer experience with a new Makefile and expanded test coverage. All documentation has been updated, and all quality checks pass.

--- a/notebooks/Automated_CUD_Analysis.ipynb
+++ b/notebooks/Automated_CUD_Analysis.ipynb
@@ -10,6 +10,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Install Dependencies\n",
+    "\n",
+    "This cell ensures that all required libraries for the analysis are installed in the notebook's environment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install -q -r ../requirements.txt"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -30,6 +48,12 @@
    "outputs": [],
    "source": [
     "import logging",
+    "import sys",
+    "from pathlib import Path",
+    "",
+    "# Add the src directory to the path to allow importing our modules",
+    "sys.path.append(str(Path.cwd().parent / 'src'))",
+    "",
     "from finops_analysis_platform.config_manager import ConfigManager",
     "from finops_analysis_platform.data_loader import load_data_from_config",
     "from finops_analysis_platform.core import CUDAnalyzer",
@@ -71,6 +95,50 @@
     "else:",
     "    logging.warning(\"Billing data is empty. Skipping analysis and report generation.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 💸 CUD Price Fetcher (New & Old Models)\n",
+    "\n",
+    "The following section demonstrates how to use the `GcpSkuFetcher` to get the latest pricing for both old and new CUD models directly from the Google Cloud Billing API."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "from getpass import getpass\n",
+    "from finops_analysis_platform.gcp_pricing import GcpSkuFetcher\n",
+    "",
+    "# --- Secure API Key Handling ---",
+    "api_key = os.getenv(\"CLOUD_BILLING_API_KEY\")",
+    "if not api_key:",
+    "    try:",
+    "        api_key = getpass('Enter your Cloud Billing API Key: ')",
+    "    except NameError: # Fallback for non-interactive environments\n",
+    "        api_key = None",
+    "",
+    "if not api_key:",
+    "    print(\"ERROR: CLOUD_BILLING_API_KEY not found as an environment variable or provided via prompt.\")",
+    "else:",
+    "    # Initialize the fetcher with your API key",
+    "    sku_fetcher = GcpSkuFetcher(api_key=api_key)",
+    "    ",
+    "    # Fetch and analyze CUD prices",
+    "    cud_data = sku_fetcher.analyze_cud_prices()",
+    "    ",
+    "    if cud_data:",
+    "        # For better analysis, load the data into a pandas DataFrame",
+    "        df_cud_prices = pd.json_normalize(cud_data, record_path=['pricing'], meta=['description', 'model_type', 'sku_id'])",
+    "        print(\"\n--- CUD Pricing Analysis ---")",
+    "        display(df_cud_prices[['model_type', 'description', 'sku_id', 'price', 'currency', 'usage_unit']])"
+   ]
   }
  ],
  "metadata": {
@@ -89,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
